# condstrip

./: .gitignore  Cargo.toml  flake.nix
.cargo/: config.toml
.github/workflows/: build.yml
src/: main.rs  mutate.rs
src/.github/workflows/: build.yml
