[package]
name = "condstrip"
version = "0.1.0"
edition = "2018"

[dependencies]
bitbuffer = "0.10"
#tf-demo-parser = { version = "0.4", path = "../tf-demo-parser" }
tf-demo-parser = { version = "0.4", git = "https://github.com/demostf/parser" }

[profile.dev]
opt-level = 2

[profile.release]
lto = true